[gd_scene load_steps=6 format=3 uid="uid://drmsq6w8t47u6"]

[ext_resource type="Script" path="res://scripts/key.gd" id="1_4xn4f"]
[ext_resource type="Texture2D" uid="uid://cxk3vbld7ljh6" path="res://assets/textures/whitepianokeys.png" id="2_lqv2t"]
[ext_resource type="Texture2D" uid="uid://hbqa5lub8yab" path="res://assets/textures/blackpianokeys.png" id="3_673b4"]
[ext_resource type="AudioStream" uid="uid://djbmixx2xps5q" path="res://assets/audio/music_c.wav" id="4_ardb1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csw6y"]
size = Vector2(8, 32)

[node name="Key" type="Node2D"]
script = ExtResource("1_4xn4f")
metadata/_edit_lock_ = true

[node name="noteArea" type="Area2D" parent="."]

[node name="noteCollisionShape" type="CollisionShape2D" parent="noteArea"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_csw6y")

[node name="whiteSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_lqv2t")
hframes = 2

[node name="blackSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_673b4")
hframes = 2

[node name="notePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ardb1")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="noteCollisionShape" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_csw6y")

[connection signal="body_entered" from="noteArea" to="." method="_on_note_area_body_entered"]
[connection signal="body_exited" from="noteArea" to="." method="_on_note_area_body_exited"]
